mockers_derive/tests/compile-fail/unsafe_method.rs
use mockers_derive::mocked;

#[mocked]
trait A {
    unsafe fn foo();
}

fn main() {}
