mockers_derive/tests/compile-fail/unsafe_method.stderr
error: Unsafe trait methods are not supported.

 --> $DIR/unsafe_method.rs:5:5
  |
5 |     unsafe fn foo();
  |     ^^^^^^
